adicionei o código dos leds, isto é, fiz as interrupções, fiz o código do adc e do pwm. Testei e está funcionando perfeitamente.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,7 +61,8 @@ target_link_libraries(tarefa-adc
         hardware_i2c
         hardware_timer
         hardware_clocks
-        
+        hardware_pwm
+        hardware_adc
         )
 
 pico_add_extra_outputs(tarefa-adc)
